Name:                   snaplet-sedna
Version:                0.0.1
License:                GPL-3
Cabal-Version:          >= 1.10.0
License-File:           LICENSE
Author:                 Eric C. Jones
Build-Type:             Simple
Maintainer:             Eric Jones (ericclaudejones at gmail.com)
Stability:              alpha
Synopsis:               Sedna C API XML Binding

Description:            Sedna native XML database bindings.
                        http://www.sedna.org/

Category:               Database, FFI

Library
  Hs-Source-Dirs:         src
  Default-Language:       Haskell98

  Build-Depends:          base             >= 4       && < 5,
                          bytestring       >= 0.9.1   && < 0.10,
                          containers       >= 0.3     && < 0.5,
                          mtl              >  2.0     && < 2.1,

  Exposed-Modules:        
                                                                         
  Ghc-Options:            -Wall

  Default-Extensions:     CPP

Source-Repository Head
    type:                 git
    location:             git@github.com:ExternalReality/snaplet-sedna.git